--- a/fon.css
+++ b/fon.css
@@ -6,12 +6,14 @@ body {
 h1 {
     background-color: ;
     /* Цвет фона под заголовком */
+     color: #feb386;
+    /* Цвет текста для h1 заголовка */
 }
 
 p {
     background-color: ;
     /* Цвет фона под текстом параграфа */
-    color: white;
+    color: #211C18;
     /* Цвет текста */
 }
 
