--- a/figma/fonx.css
+++ b/figma/fonx.css
@@ -10,11 +10,13 @@ body{
     color: white;
 }
 
-header{
+header {
     width: 1298px;
     height: 60px;
     display: flex;
-    margin: 30 auto 0 auto;
+    top: 30px;
+    left: 312px;
+    border-radius: 3px;
 }
 header img{
     justify-content: flex-start;
@@ -56,3 +58,15 @@ header button{
 .heads_logo h1{
     margin-top: 20px;
 }
+#logow{
+    position: absolute;
+    width: 32px;
+    height: 22px;
+    left: 30px;
+    top: 41.51px;
+}
+#logo{
+    left: 300px;
+}
+
+
