--- a/fon.css
+++ b/fon.css
@@ -1,121 +1,514 @@
 body {
-    background-color: #49608d;
-    /* Цвет фона веб-страницы */
-}
-
-h1 {
-    background-color: ;
-    /* Цвет фона под заголовком */
-     color: #feb386;
-    /* Цвет текста для h1 заголовка */
-}
-
-p {
-    background-color: ;
-    /* Цвет фона под текстом параграфа */
-    color: #211C18;
-    /* Цвет текста */
-}
-
-h2 {
-    background-color: #4b8a1c;
-    /* Цвет фона под заголовком */
-}
-
-footer {
-    background-color: #4b8a1c;
-}
-
-
-#one {
-    width: 70%;
-}
-
-
-.menu-main {
-    list-style: none;
-    margin: 40px 0 5px;
-    padding: 25px 0 5px;
-    text-align: center;
-    background: #49608d;
-}
-
-.menu-main li {
-    display: inline-block;
-}
-
-.menu-main li:after {
-    content: "|";
-    color: #606060;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.menu-main li:last-child:after {
-    content: none;
-}
-
-.menu-main a {
-    text-decoration: none;
-    font-family: 'Ubuntu Condensed', sans-serif;
-    letter-spacing: 2px;
-    position: relative;
-    padding-bottom: 20px;
-    margin: 0 34px 0 30px;
-    font-size: 17px;
-    text-transform: uppercase;
-    display: inline-block;
-    transition: color .2s;
-}
-
-.menu-main a,
-.menu-main a:visited {
-    color: #9d999d;
-}
-
-.menu-main a.current,
-.menu-main a:hover {
-    color: #feb386;
-}
-
-.menu-main a:before,
-.menu-main a:after {
-    content: "";
     position: absolute;
-    height: 4px;
-    top: auto;
-    right: 50%;
-    bottom: -5px;
-    left: 50%;
-    background: #feb386;
-    transition: .8s;
+    width: 1920px;
+    height: 5155px;
+    background-color: #162831;
 }
 
-.menu-main a:hover:before,
-.menu-main .current:before {
-    left: 0;
+header {
+    width: 1298px;
+    height: 60px;
+    top: 30px;
+    left: 312px;
+    border-radius: 3px;
+    margin-bottom: 50px;
 }
 
-.menu-main a:hover:after,
-.menu-main .current:after {
-    right: 0;
+.menu {
+    width: 60px;
+    height: 60px;
+    top: 30px;
+    left: 312px;
 }
 
-@media (max-width: 550px) {
-    .menu-main {
-        padding-top: 0;
-    }
+#logov {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    top: 30px;
+    left: 312px;
+}
 
-    .menu-main li {
-        display: block;
-    }
+#logow {
+    position: absolute;
+    width: 32px;
+    height: 22px;
+    top: 43.5078125px;
+    left: 326px;
+}
 
-    .menu-main li:after {
-        content: none;
-    }
+.nav {
+    position: absolute;
+    display: flex;
+    width: 655px;
+    height: 19px;
+    top: 51px;
+    left: 586px;
+    gap: 50px;
 
-    .menu-main a {
-        padding: 25px 0 20px;
-        margin: 0 30px;
-    }
+}
+
+#navo {
+    width: 56px;
+    height: 19px;
+}
+
+.batt {
+
+    position: absolute;
+    width: 155px;
+    height: 36px;
+    top: 43px;
+    left: 1455px;
+    border-radius: 3px;
+}
+
+header button {
+    position: absolute;
+    width: 155px;
+    height: 36px;
+    border-radius: 3px;
+    padding: 9px, 15px, 9px, 15px;
+    gap: 10px;
+    background-color: #018ABE;
+
+}
+
+.head_logo {
+    display: flex;
+    left: 312px;
+    width: 1296px;
+    height: 600px;
+    margin: 30px auto 0 auto;
+    background-image: url(unsplash_S-llxYh3GzI.png);
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+}
+
+.head_text {
+    color: white;
+    font-size: 24px;
+    text-align: center;
+}
+
+.text {
+    font-size: 64px;
+}
+
+
+a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.services {
+    display: flex;
+    height: 699px;
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+}
+
+#servicestext {
+    position: absolute;
+    color: white;
+    font-size: 42px;
+    text-align: center;
+    width: 336px;
+    height: 59px;
+    top: 890px;
+    left: 792px;
+}
+
+.servicesone {
+    position: absolute;
+    margin: 30px auto 0 auto;
+    background-image: url(unsplash_TnOyyEtrKd0.png);
+    background-repeat: no-repeat;
+    width: 416px;
+    height: 540px;
+    top: 1049px;
+    left: 312px;
+    border-radius: 0px 0px 10px 10px;
+}
+
+.servicestwo {
+    position: absolute;
+    margin: 30px auto 0 auto;
+    background-image: url(unsplash.png);
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    width: 416px;
+    height: 258px;
+    top: 1331px;
+    left: 752px;
+    border-radius: 10px;
+}
+
+.servicesthree {
+    position: absolute;
+    margin: 30px auto 0 auto;
+    background-image: url(unsp.png);
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    width: 416px;
+    height: 258px;
+    top: 1331px;
+    left: 1192px;
+    border-radius: 10px;
+}
+
+.servicesfour {
+    position: absolute;
+    margin: 30px auto 0 auto;
+    background-image: url(unspla.png);
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    width: 416px;
+    height: 258px;
+    top: 1049px;
+    left: 752px;
+    border-radius: 10px;
+}
+
+.servicesfive {
+    position: absolute;
+    margin: 30px auto 0 auto;
+    background-image: url(uns.png);
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    width: 416px;
+    height: 258px;
+    top: 1049px;
+    left: 1192px;
+    border-radius: 10px;
+}
+
+.textone {
+    color: white;
+    font-size: 24px;
+    margin-left: 50px;
+    margin-top: 456px;
+}
+
+.texttwo {
+    color: white;
+    font-size: 24px;
+    margin-left: 40px;
+    margin-top: 194px;
+}
+
+.textthree {
+    color: white;
+    font-size: 24px;
+    margin-left: 40px;
+    margin-top: 160px;
+}
+
+.textfour {
+    color: white;
+    font-size: 24px;
+    margin-left: 40px;
+    margin-top: 194px;
+}
+
+.textfive {
+    color: white;
+    font-size: 24px;
+    margin-left: 40px;
+    margin-top: 160px;
+}
+
+#heading {
+    position: absolute;
+    color: white;
+    font-size: 42px;
+    text-align: center;
+    width: 154px;
+    height: 59px;
+    top: 1739px;
+    left: 883px;
+}
+
+.review {
+    position: absolute;
+    width: 636px;
+    height: 350px;
+    top: 1898px;
+    left: 642px;
+    border-radius: 10px;
+    background: #018ABE;
+}
+
+.revie {
+    margin-top: 50px;
+    margin-left: 60px;
+    width: 516px;
+    height: 28px;
+    top: 1948px;
+    left: 702px;
+    font-family: Proxima Nova;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.revi {
+    margin-top: 20px;
+    margin-left: 60px;
+    width: 516px;
+    height: 196px;
+    top: 1996px;
+    left: 702px;
+    font-family: Proxima Nova;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.reviewtwo {
+    position: absolute;
+    background: #018ABE;
+    width: 500px;
+    height: 276px;
+    top: 1935px;
+    left: 92px;
+    border-radius: 10px;
+    opacity: 40%;
+}
+
+.revietwo {
+    margin-top: 40px;
+    margin-left: 45px;
+    width: 410px;
+    height: 22px;
+    top: 1975px;
+    left: 137px;
+    font-family: Proxima Nova;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+
+
+}
+
+.revitwo {
+    margin-top: 15px;
+    margin-left: 45px;
+    width: 410px;
+    height: 128px;
+    top: 2012px;
+    left: 137px;
+    font-family: Proxima Nova;
+    font-size: 10px;
+    font-weight: 300;
+    line-height: 14px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.reviewthree {
+    position: absolute;
+    background: #018ABE;
+    width: 500px;
+    height: 276px;
+    top: 1935px;
+    left: 1328px;
+    border-radius: 10px;
+    opacity: 40%;
+}
+
+.reviethree {
+    margin-top: 40px;
+    margin-left: 45px;
+    width: 410px;
+    height: 22px;
+    top: 1975px;
+    left: 1373px;
+    font-family: Proxima Nova;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.revithree {
+    margin-top: 15px;
+    margin-left: 45px;
+    width: 410px;
+    height: 142px;
+    top: 2012px;
+    left: 1373px;
+    font-family: Proxima Nova;
+    font-size: 10px;
+    font-weight: 300;
+    line-height: 14px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.control {
+    margin-top: 20px;
+    width: 124px;
+    height: 16px;
+    top: 2308px;
+    left: 898px;
+    border-radius: 3px;
+    position: absolute;
+    background-image: url(controls.png);
+}
+
+#headingtwo {
+    position: absolute;
+    color: white;
+    font-size: 42px;
+    text-align: center;
+    width: 389px;
+    height: 59px;
+    top: 2474px;
+    left: 766px;
+    border-radius: 0px 50px 0px 50px;
+}
+
+.group5 {
+    position: absolute;
+    width: 466px;
+    top: 2699px;
+    left: 422px;
+}
+
+.grou5 {
+    width: 406.2815246582031px;
+    height: 34px;
+    top: 2699px;
+    left: 422px;
+    font-family: Proxima Nova;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 34px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+
+}
+
+.gro5 {
+    width: 466px;
+    height: 170px;
+    top: 2763px;
+    left: 422px;
+    font-family: Proxima Nova;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+
+}
+
+.group4 {
+    position: absolute;
+    width: 466px;
+    height: 366px;
+    top: 3115px;
+    left: 1032px;
+
+}
+
+.grou4 {
+    width: 415px;
+    height: 34px;
+    top: 3115px;
+    left: 1032px;
+    font-family: Proxima Nova;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 34px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+
+}
+
+.gro4 {
+    width: 466px;
+    height: 302px;
+    top: 3179px;
+    left: 1032px;
+    font-family: Proxima Nova;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+
+}
+
+.rectan {
+    width: 526px;
+    height: 365px;
+    top: 2633px;
+    left: 972px;
+    border-radius: 10px;
+    position: absolute;
+    background-image: url(Rectangle\ 23.png);
+}
+
+.rectanone {
+    width: 526px;
+    height: 400px;
+    top: 3098px;
+    left: 422px;
+    border-radius: 10px;
+    position: absolute;
+    background-image: url(Rectangle\ 24.png);
+}
+
+.price {
+    width: 1076px;
+    height: 614px;
+    top: 3648px;
+    left: 422px;
+    position: absolute;
+    background-image: url(price.png);
+}
+
+.contacts {
+    width: 1296px;
+    height: 604px;
+    top: 4412px;
+    left: 312px;
+    position: absolute;
+    background-image: url(contact.png);
+}
+
+.maps {
+    width: 1296px;
+    height: 19px;
+    top: 5106px;
+    left: 312px;
+    position: absolute;
+    background-image: url(main-footer.png);
 }
