--- a/fon.css
+++ b/fon.css
@@ -255,16 +255,51 @@ left: 282px;
 border-radius: 50px;
 
 }
-.left_menu li{
-    display: none;
+#search {
+    display: flex;
+    align-items: center;
+    width: 875px;
+    height: 62px;
+    padding-left: 20px;
+    border: none;
 }
-.left_menu:active li{
-    display: block;
-}
-.search-button{
+
+input[type=submit] {
+    background-color: #27563A;
+    background-image: url(/css/img/btn-search.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-radius: 0px 50px 50px 0px;
     width: 72px;
-left: 803px;
-padding: 19px 24px 19px 24px;
-background: #27563A;
+    height: 62px;
+    border: none;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    filter: brightness(1.5);
+    transition: filter 0.5s ease-out, width 1s ease-in-out;
+}
+select {
+    color: #000;
+    font-size: 16px;
+    font-family: Plus Jakarta Sans;
+    font-weight: 500;
+    line-height: 22px;
+    padding: 20px 27px;
+    border: none;
+
+    background: rgba(229, 229, 229, 1);
+    border-radius: 50px 0 0 50px;
+    appearance: none;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+    background-size: 1em;
+}
+form {
+    display: flex;
+    flex-direction: row;
+    margin-top: 64px;
 
 }
