--- a/TFT/css/main.css
+++ b/TFT/css/main.css
@@ -16,7 +16,7 @@ body {
 */
 
 header {
-    background: url(/css/img/bg.png), lightgray 50% / cover no-repeat;
+    background: url(/TFT//css/img/bg.png), lightgray 50% / cover no-repeat;
     background-size: auto 100%;
     height: 645px;
 }
@@ -76,7 +76,7 @@ li {
 }
 
 .btn-link:after {
-    content: url(/css/img/arrow.svg);
+    content: url(/TFT//css/img/arrow.svg);
 
 }
 
@@ -179,7 +179,7 @@ select {
 
 input[type=submit] {
     background-color: #27563A;
-    background-image: url(/css/img/btn-search.svg);
+    background-image: url(/TFT//css/img/btn-search.svg);
     background-position: center center;
     background-repeat: no-repeat;
     border-radius: 0px 50px 50px 0px;
@@ -249,7 +249,7 @@ article p {
 }
 
 .btn:after {
-    content: url(/css/img/arrow-right.svg);
+    content: url(/TFT//css/img/arrow-right.svg);
 }
 
 hr {
@@ -505,7 +505,7 @@ img.heart {
 }
 
 .feet:before {
-    content: url(/css/img/feet.svg);
+    content: url(/TFT//css/img/feet.svg);
     margin-left: 56px;
 
 }
@@ -742,28 +742,28 @@ summary {
 }
 
 .mail:before {
-    content: url(/css/img/PaperPlaneTilt.svg);
+    content: url(/TFT//css/img/PaperPlaneTilt.svg);
     position: relative;
     margin-right: 24px;
     top: 20px;
 }
 
 .tel:before {
-    content: url(/css/img/Phone.svg);
+    content: url(/TFT//css/img/Phone.svg);
     position: relative;
     margin-right: 24px;
     top: 20px;
 }
 
 .map:before {
-    content: url(/css/img/MapPin.svg);
+    content: url(/TFT//css/img/MapPin.svg);
     position: relative;
     margin-right: 24px;
     top: 20px;
 }
 
 .clock:before {
-    content: url(/css/img/Clock\ \(1\).svg);
+    content: url(/TFT//css/img/Clock\ \(1\).svg);
     position: relative;
     margin-right: 24px;
     top: 20px;
@@ -788,7 +788,7 @@ summary {
 }
 
 .screen-label {
-    background-image: url(/css/img/bg-footer.jpeg);
+    background-image: url(/TFT//css/img/bg-footer.jpeg);
     background-size:  100% auto;
     background-repeat: no-repeat;
     background-position: center;
