--- a/web/fon.css
+++ b/web/fon.css
@@ -56,11 +56,9 @@ header {
 
 /* Блок контента */
 main {
-    display: flex;
+
     width: 1440px;
     height: 8827px;
-
-
 }
 
 .slip {
@@ -69,7 +67,8 @@ main {
     width: 100vw;
     height: 882px;
     background-image: url(Rectangle.png);
-    
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .main_text {
@@ -80,12 +79,40 @@ main {
     line-height: 44px;
     letter-spacing: 0.4px;
 }
-.slip_butt{
+
+.slip_butt {
     margin-top: 180px;
     margin-right: 25px;
     width: 201px;
-height: 64px;
-flex-shrink: 0;
-background-color: #E1FF32;
-border: 0;
+    height: 64px;
+    flex-shrink: 0;
+    background-color: #E1FF32;
+    border: 0;
+}
+
+.tet {
+    display: flex;
+    justify-content: center;
+}
+
+hr {
+    margin-top: 84px;
+    background: #006450;
+    width: 96%;
+    height: 4px;
+}
+
+.tett {
+    display: flex;
+    justify-content: center;
+}
+
+.tetp {
+    width: 583px;
+    margin-top: 84px;
+    font-size: 36px;
+    line-height: 44px;
+    letter-spacing: 0.4000000059604645px;
+    text-align: center;
+    color: #006450;
 }
