--- a/shop/fon.css
+++ b/shop/fon.css
@@ -184,58 +184,148 @@ header {
     color: #A4A4A4;
     text-decoration: none;
 }
-.maicente{
+
+.maicente {
     display: flex;
-width: 1512px;
-padding: 0px 40px;
-flex-direction: column;
-align-items: center;
-gap: 16px;
+    width: 1512px;
+    padding: 0px 40px;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
 }
-.maicente1{
+
+.maicente1 {
     color: #000;
-text-align: center;
-font-family: Jost;
-font-size: 24px;
-font-style: normal;
-font-weight: 300;
-line-height: normal;
-letter-spacing: 5px;
-text-transform: uppercase;
-text-decoration: none;
+    text-align: center;
+    font-family: Jost;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    text-decoration: none;
 }
-.frame{
+
+.frame {
     display: flex;
-width: 1512px;
-padding: 16px 40px;
-justify-content: space-between;
-align-items: flex-start;
+    width: 1512px;
+    padding: 16px 40px;
+    justify-content: space-between;
+    align-items: flex-start;
 }
-.frameleft{
+
+.frameleft {
     display: flex;
-align-items: flex-start;
-gap: 16px;
+    align-items: flex-start;
+    gap: 16px;
 }
-.frameleft1{
+
+.frameleft1 {
     display: flex;
-padding: 16px 8px 16px 0px;
-align-items: center;
-gap: 8px;
-color: #000000;
-text-decoration: none;
+    padding: 16px 8px 16px 0px;
+    align-items: center;
+    gap: 8px;
+    color: #000000;
+    text-decoration: none;
 }
-.frameright{
+
+.frameright {
     display: flex;
-padding: 16px 73px;
-align-items: center;
-gap: 8px;
+    padding: 16px 73px;
+    align-items: center;
+    gap: 8px;
 }
-.frameright1{
+
+.frameright1 {
     color: #000;
-font-family: Manrope;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px;
-text-decoration: none;
+    font-family: Manrope;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    text-decoration: none;
+}
+
+/* Оформление карточек */
+.maiblo {
+    display: flex;
+    padding: 0px 40px;
+    flex-direction: column;
+    align-items: center;
+    align-self: stretch;
+    background: #FFF;
+    width: 1512px;
+    height: 1713px;
+    padding: 0px 40px 0px 40px;
+
+
+}
+
+.maiosnov {
+    display: flex;
+    padding: 1px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1px;
+    align-self: stretch;
+    background: #EBEBEB;
+    width: 1435px;
+    height: 1640px;
+    padding: 1px;
+}
+
+.maicard {
+    display: flex;
+    align-items: flex-start;
+    gap: 1px;
+    align-self: stretch;
+    width: 1435px;
+    height: 546px;
+    flex-wrap: wrap;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: stretch;
+    background: #FFF;
+    width: 358px;
+    height: 546px;
+}
+
+.cardtext {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.brand {
+    display: flex;
+    width: 358px;
+    padding: 16px 0px 8px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.cardname {
+    display: flex;
+    padding: 8px 0px 24px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.nam {
+    width: 358px;
+    color: #000;
+    text-align: center;
+    font-family: Manrope;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18.86px;
+    letter-spacing: 0.16px;
 }
