--- a/shop/fon.css
+++ b/shop/fon.css
@@ -329,3 +329,140 @@ header {
     line-height: 18.86px;
     letter-spacing: 0.16px;
 }
+
+.maifoo {
+    display: flex;
+    padding: 24px 661px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    background: #FFF;
+}
+
+.ten {
+    display: flex;
+    left: 20.5px;
+    top: 24px;
+    color: rgba(0, 0, 0, 0.40);
+    font-family: Manrope;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.noten {
+    display: flex;
+    color: #000;
+    text-align: center;
+    font-family: Manrope;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+/* Подвал */
+
+footer {
+    background: #F0F0F0;
+    display: flex;
+    width: 1512px;
+    padding-top: 80px;
+    justify-content: center;
+    align-items: center;
+}
+
+#footer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 80px;
+    grid-row-gap: 0px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
+.social {
+    display: flex;
+    flex-direction: row;
+    margin-top: 32px;
+}
+
+.social img {
+    cursor: pointer;
+    margin-right: 12px;
+}
+
+.f-button {
+    display: inline-flex;
+    padding: 21px 32px;
+    width: 151px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40px;
+    background: #E4E5DF;
+    margin-top: 40px;
+    color: #000;
+}
+
+.column b {
+    color: #FFF;
+    font-size: 20px;
+    font-family: Plus Jakarta Sans;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 32px;
+    margin-bottom: 24px;
+}
+
+.column a#nav {
+    color: #D3D6D3;
+    font-size: 16px;
+    font-family: Plus Jakarta Sans;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+}
+
+.footer {
+    margin-top: 96px;
+    padding-bottom: 25px;
+
+    color: #D3D6D3;
+    font-size: 12px;
+    font-family: Plus Jakarta Sans;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.rss{
+    color: #000;
+font-family: Manrope;
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; /* 150% */
+letter-spacing: 0.48px;
+}
+#rss{
+
+display: flex;
+width: 573px;
+padding: 18px 519px 14.4px 8px;
+align-items: center;
+border-bottom: 1px solid #CDCDCD;
+}
+.but{
+    display: flex;
+width: 143px;
+height: 54px;
+padding: 18px 0px 17px 0px;
+justify-content: center;
+align-items: center;
+background: #000000;
+}
