--- a/shop/fon.css
+++ b/shop/fon.css
@@ -362,6 +362,7 @@ header {
     font-weight: 600;
     line-height: normal;
 }
+
 /* Подвал */
 
 footer {
@@ -373,96 +374,88 @@ footer {
     align-items: center;
 }
 
-#footer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 80px;
-    grid-row-gap: 0px;
+.footmen {
+    width: 1512px;
+    height: 583px;
+    flex-shrink: 0;
 }
 
-.column {
+.footskid {
     display: flex;
-    flex-direction: column;
-}
-
-.social {
-    display: flex;
-    flex-direction: row;
-    margin-top: 32px;
-}
-
-.social img {
-    cursor: pointer;
-    margin-right: 12px;
-}
-
-.f-button {
-    display: inline-flex;
-    padding: 21px 32px;
-    width: 151px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 40px;
-    background: #E4E5DF;
-    margin-top: 40px;
+    width: 716px;
     color: #000;
-}
-
-.column b {
-    color: #FFF;
-    font-size: 20px;
-    font-family: Plus Jakarta Sans;
+    font-family: Manrope;
+    font-size: 16px;
     font-style: normal;
     font-weight: 600;
-    line-height: 32px;
-    margin-bottom: 24px;
+    line-height: 24px;
+    /* 150% */
+    letter-spacing: 0.48px;
+    padding-left: 40px;
 }
 
-.column a#nav {
-    color: #D3D6D3;
-    font-size: 16px;
-    font-family: Plus Jakarta Sans;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-
+.rss {
+    display: inline-flex;
+    align-items: flex-start;
+    padding: 20px 40px
 }
 
-.footer {
-    margin-top: 96px;
-    padding-bottom: 25px;
-
-    color: #D3D6D3;
-    font-size: 12px;
-    font-family: Plus Jakarta Sans;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-.rss{
-    color: #000;
-font-family: Manrope;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 24px; /* 150% */
-letter-spacing: 0.48px;
-}
-#rss{
-
-display: flex;
-width: 573px;
-padding: 18px 519px 14.4px 8px;
-align-items: center;
-border-bottom: 1px solid #CDCDCD;
-}
-.but{
+.footemai {
     display: flex;
-width: 143px;
-height: 54px;
-padding: 18px 0px 17px 0px;
-justify-content: center;
-align-items: center;
-background: #000000;
+    padding: 18px 200px 14.4px 8px;
+    align-items: center;
+    border-bottom: 1px solid #CDCDCD;
+
+}
+
+a.button28 {
+    display: flex;
+    width: 83px;
+    height: 34px;
+    font-weight: 700;
+    justify-content: center;
+    color: rgb(209, 209, 217);
+    text-decoration: none;
+    text-shadow: 0 -1px 2px rgba(0, 0, 0, .2);
+    padding: .5em 1em;
+    outline: none;
+    border-radius: 3px;
+    background: linear-gradient(rgb(110, 112, 120), rgb(81, 81, 86)) rgb(110, 112, 120);
+    box-shadow:
+        0 1px rgba(255, 255, 255, .2) inset,
+        0 3px 5px rgba(0, 1, 6, .5),
+        0 0 1px 1px rgba(0, 1, 6, .2);
+    transition: .2s ease-in-out;
+}
+
+a.button28:hover:not(:active) {
+    background: linear-gradient(rgb(126, 126, 134), rgb(70, 71, 76)) rgb(126, 126, 134);
+}
+
+a.button28:active {
+    top: 1px;
+    background: linear-gradient(rgb(76, 77, 82), rgb(56, 57, 62)) rgb(76, 77, 82);
+    box-shadow:
+        0 0 1px rgba(0, 0, 0, .5) inset,
+        0 2px 3px rgba(0, 0, 0, .5) inset,
+        0 1px 1px rgba(255, 255, 255, .1);
+}
+
+.footMav {
+    display: flex;
+    width: 1512px;
+    height: 278px;
+    padding: 0px 40px;
+    align-items: flex-start;
+    flex-shrink: 0;
+}
+
+.footItem {
+    display: flex;
+    padding-right: 0px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 14px;
+    flex: 1 0 0;
+    align-self: stretch;
 }
