--- a/K.S/fon.css
+++ b/K.S/fon.css
@@ -5,7 +5,6 @@
 .nav {
     position: absolute;
     display: flex;
-    width: 655px;
     height: 19px;
     top: 51px;
     left: 586px;
@@ -25,4 +24,36 @@ a {
     color: white;
     text-decoration: none;
     font-size: 14px;
+}
+body{
+    width: 1920px;
+    height: 5155px;
+    background-color: #162831;
+    color: white;
+}
+header {
+    width: 1298px;
+    height: 60px;
+    display: flex;
+    top: 30px;
+    left: 312px;
+    border-radius: 3px;
+}
+header button{
+    justify-content: flex-end;
+    padding: 9px 15px 9px 15px;
+    color: white;
+    background-color: #018ABE;
+    border-radius: 10px;
+}
+header img{
+    justify-content: flex-start;
+}
+nav{
+    margin: 30px auto 0 auto;
+}
+nav a{
+    color: white;
+    margin-left: 50px;
+    text-decoration: none;
 }
