--- a/JS/lesson15/fon.css
+++ b/JS/lesson15/fon.css
@@ -1,4 +1,31 @@
 input[type=text] {
-    padding:10px;
-    margin:10px 0;
-  }
+  padding: 10px;
+  margin: 10px 0;
+}
+
+.outputs {
+  width: 200px;
+  height: 300px;
+  margin: 20px auto 0 auto;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px 0px rgb(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+body {
+  text-align: center;
+}
+
+#nnn {
+  margin-bottom: 30px;
+  background-color: #8c8f8c;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10px;
+}
