--- a/JS/lesson21/style.css
+++ b/JS/lesson21/style.css
@@ -37,3 +37,17 @@ main{
         padding: 5px;
     }
 }
+
+.product-card {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 15px;
+    margin: 10px;
+}
+.product-image {
+    width: 100px;
+    height: 100px;
+    margin-right: 15px;
+}
